# Brandshop_Sales_Bot

./: .gitignore  README.md  cli.py  first_request.html  product_data.json  pyproject.toml
brandshop_bot/: cli.py  params.py  run_bot.py
brandshop_bot/data/: 2022_09_17_items_data.json  2022_09_19_items_data.json
brandshop_bot/parser/: parser.py  parser_2.py
data/: 2022_09_18_items_data.json
parser/: parser.py
