[tool.poetry]
name = "brandshop_sales_bot"
version = "0.1.0"
description = ""
authors = ["Max Odinokiy <max.odinokiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
